force-app/main/default/objects/Association_Record_Type_et_pays__mdt/Association_Record_Type_et_pays__mdt.object-meta.xml
<CustomObject>
    <description>Cet objet contient les type d&#39;enregistrement associés à chaque pays</description>
    <label>Association Record Type et pays</label>
    <pluralLabel>Association Record Type et pays</pluralLabel>
</CustomObject>