force-app/main/default/objects/Association_Record_Type_et_pays__mdt/fields/ID_DemarrageActivite__c.field-meta.xml
<CustomField>
    <fullName>ID_DemarrageActivite__c</fullName>
    <label>ID_DemarrageActivite</label>
    <length>18</length>
    <type>Text</type>
</CustomField>