force-app/main/default/objects/Association_Record_Type_et_pays__mdt/fields/ID_File_service_line__c.field-meta.xml
<CustomField>
    <fullName>ID_File_service_line__c</fullName>
    <label>ID_File_service_line</label>
    <length>18</length>
    <type>Text</type>
</CustomField>