force-app/main/default/objects/Association_Record_Type_et_pays__mdt/fields/ID_GestMatQueue__c.field-meta.xml
<CustomField>
    <fullName>ID_GestMatQueue__c</fullName>
    <description>ID de la file de la Gestion Matérielle</description>
    <label>ID_GestMatQueue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>