force-app/main/default/objects/Association_Record_Type_et_pays__mdt/fields/ID_Indisponibilit_partenaire__c.field-meta.xml
<CustomField>
    <fullName>ID_Indisponibilit_partenaire__c</fullName>
    <label>ID_Indisponibilité_partenaire</label>
    <length>18</length>
    <type>Text</type>
</CustomField>