force-app/main/default/objects/Association_Record_Type_et_pays__mdt/fields/ID_Indisponibilite_PB_PDA_Panne__c.field-meta.xml
<CustomField>
    <fullName>ID_Indisponibilite_PB_PDA_Panne__c</fullName>
    <label>ID_Indisponibilite_PB_PDA_Panne</label>
    <length>18</length>
    <type>Text</type>
</CustomField>