force-app/main/default/objects/Association_Record_Type_et_pays__mdt/fields/ID_Indisponibilite_standard__c.field-meta.xml
<CustomField>
    <fullName>ID_Indisponibilite_standard__c</fullName>
    <label>ID_Indisponibilite_standard</label>
    <length>18</length>
    <type>Text</type>
</CustomField>