force-app/main/default/objects/Association_Record_Type_et_pays__mdt/fields/ID_Injoignable_Indisponible__c.field-meta.xml
<CustomField>
    <fullName>ID_Injoignable_Indisponible__c</fullName>
    <label>ID_Injoignable_Indisponible</label>
    <length>18</length>
    <type>Text</type>
</CustomField>