force-app/main/default/objects/Association_Record_Type_et_pays__mdt/fields/ID_MoyenScan_Actif_Sans_Formation_Scan__c.field-meta.xml
<CustomField>
    <fullName>ID_MoyenScan_Actif_Sans_Formation_Scan__c</fullName>
    <label>ID_MoyenScan_Actif_Sans_Formation_Scan</label>
    <length>18</length>
    <type>Text</type>
</CustomField>