force-app/main/default/objects/Association_Record_Type_et_pays__mdt/fields/ID_PlanificationQueue__c.field-meta.xml
<CustomField>
    <fullName>ID_PlanificationQueue__c</fullName>
    <description>Ce champ permet de renseigner l&#39;ID de la file d&#39;attente PUS_FR_Planification.</description>
    <label>ID_PlanificationQueue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>