force-app/main/default/objects/Association_Record_Type_et_pays__mdt/fields/ID_Prospect_A_Valider__c.field-meta.xml
<CustomField>
    <fullName>ID_Prospect_A_Valider__c</fullName>
    <label>ID Prospect A Valider</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>