force-app/main/default/objects/Association_Record_Type_et_pays__mdt/fields/ID_PUDO_Non_Suivi__c.field-meta.xml
<CustomField>
    <fullName>ID_PUDO_Non_Suivi__c</fullName>
    <label>ID PUDO Non Suivi</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>