force-app/main/default/objects/Association_Record_Type_et_pays__mdt/fields/ID_Requete_ContratNonRespecte__c.field-meta.xml
<CustomField>
    <fullName>ID_Requete_ContratNonRespecte__c</fullName>
    <label>ID_Requete_ContratNonRespecte</label>
    <length>18</length>
    <type>Text</type>
</CustomField>