force-app/main/default/objects/Association_Record_Type_et_pays__mdt/fields/ID_suivi_CO__c.field-meta.xml
<CustomField>
    <fullName>ID_suivi_CO__c</fullName>
    <label>ID suivi CO</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>