force-app/main/default/objects/Association_Record_Type_et_pays__mdt/fields/ID_WebHelpQueue__c.field-meta.xml
<CustomField>
    <fullName>ID_WebHelpQueue__c</fullName>
    <description>Le propriétaire de la requête de type anomalie de synchronisation</description>
    <inlineHelpText>Le propriétaire de la requête de type anomalie de synchronisation</inlineHelpText>
    <label>ID_WebHelpQueue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>